corrected non visible image

--- a/style.css
+++ b/style.css
@@ -384,3 +384,6 @@ color: #0e76a8;
   box-shadow: 1px 2px 4px #d42e81;
   opacity: 90%;
 }
+#portrait-image{
+  background-image: url("Assets/about/portrait-img.jpg");
+}
